--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass tasks:9000;
+        fastcgi_pass gateway:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
