--- a/tasks/.env.example
+++ b/tasks/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
+APP_NAME=Tasks
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tm6gLNls3wJz3QKf1L6L6idTbpZL/NUzzaucHdgQbsM=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=fr
+APP_FALLBACK_LOCALE=fr
+APP_FAKER_LOCALE=fr_FR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -21,11 +21,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+#DB_CONNECTION=sqlite
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=db-tasks
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=tasks
+DB_USERNAME=laravel
 DB_PASSWORD=secret
 
 SESSION_DRIVER=database
